--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
+    "serverstart": "DEBUG=express-mini-message-board:* npm run devstart"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-validator": "^6.15.0",
     "http-errors": "~1.6.3",
+    "luxon": "^3.2.1",
+    "mongoose": "^6.10.0",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
