--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,5 +10,16 @@
       ]
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "builds": [
+    {
+        "src": "app.js",
+        "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "app.js"
+      }
+  ]
 }
