--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,15 +11,15 @@
     }
   ],
   "builds": [
-    {
-        "src": "app.js",
-        "use": "@vercel/node"
-    }
+      {
+          "src": "./app.js",
+          "use": "@vercel/node"
+      }
   ],
   "routes": [
       {
-        "src": "/(.*)",
-        "dest": "app.js"
+          "src": "/(.*)",
+          "dest": "/"
       }
   ]
 }
